0.15
 - Fix error mesaage for A.
 - Fix error message for Button.

0.14 2024-05-29T22:59:40+02:00
 - Add test for Option.
 - Add tests for Select.
 - Add tests for Textarea.
 - Remove obsolete code.
 - Rewrite tests from CSS::Struct::Output::Indent to
   CSS::Struct::Output::Structure.

0.13 2024-05-29T13:36:14+02:00
 - Fix test code (trailing ',').
 - Remove 'tags' setting in tests for init(). Not needed.
 - Rewrite tests from Tags::Output::Raw to Tags::Output::Structure.
 - Sort modules in tests.
 - Sort tests in each constructor test file.

0.12 2024-04-22T12:03:45+02:00
 - Add 'onchange' processing in Select.

0.11 2024-04-14T18:16:11+02:00
 - Fix test for 'step' parameter on Windows.

0.10 2024-04-12T17:41:38+02:00
 - Add 'step' parameter to Input.

0.09 2024-03-08T09:43:54+01:00
 - Fix minimal dependency to Tags::HTML.

0.08 2024-02-13T08:12:30+01:00
 - Fix test dependencies.

0.07 2024-02-12T12:18:17+01:00
 - Add CSS for Input button.
 - Add CSS for Input checkbox.
 - Support onlick to Input.

0.06 2024-02-06T07:25:46+01:00
 - Fix minimal version of CSS::Struct::Output::Structure (GH#1).

0.05 2024-02-05T19:09:13+01:00
 - Add missing label to Select.
 - Rewrite Option to use of tags_value() and tags_boolean() helpers.
 - Rewrite Select to use of tags_value() and tags_boolean() helpers.

0.04 2024-02-05T11:50:12+01:00
 - Add tests for form.
 - Fix default CSS for input type email.

0.03 2024-02-04T18:00:04+01:00
 - Add Option tests.
 - Add doc for Utils.
 - Add label for Textarea.
 - Another fix of Form processing.
 - Fix CSS processing in Form.
 - Fix doc in Form.
 - Fix doc in Option.
 - Fix module abstract.
 - Implement Utils::tags_label().
 - Improve A element output.
 - Rename variable in Utils.
 - Rewrite Input to use helpers.
 - Simplify Form in same way as other objects.
 - Update copyright years.

0.02 2024-01-07T00:39:59+01:00
 - Add Utils module with helpers.
 - Add tests for A.
 - Fix A serialization for Tags structure.
 - Fix test dependencies.