@@ -1,6 +1,7 @@
 0.15
  - Fix error mesaage for A.
  - Fix error message for Button.
+ - Fix error message for Textarea.
 
 0.14 2024-05-29T22:59:40+02:00
  - Add test for Option.
